5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1760_1576.log
== TEST (2019-05-27 18:49:25) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i > size):
	elif((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] = b[i])
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- ERROR:
File "XXXX", line 9
    elif((a[i] == 11) and (b[i] == 22)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:51:21) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i > size):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] = b[i])
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- ERROR:
File "XXXX", line 21
    elif(a[i] = b[i])
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:55:45) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i > size):
	elif((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i])
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- ERROR:
File "XXXX", line 9
    elif((a[i] == 11) and (b[i] == 22)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:56:07) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i > size):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i])
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- ERROR:
File "XXXX", line 21
    elif(a[i] == b[i])
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:58:30) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i])
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- ERROR:
File "XXXX", line 21
    elif(a[i] == b[i])
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:59:52) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif((a[i] == 11 and b[i] == 11) or (a[i] == 22 and b[i] == 22) or (a[i] == 33 and b[i] == 33))
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- ERROR:
File "XXXX", line 21
    elif((a[i] == 11 and b[i] == 11) or (a[i] == 22 and b[i] == 22) or (a[i] == 33 and b[i] == 33))
                                                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:02:49) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i])
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- EXECUTION TIME:
0.137206
-- ERROR:
  File "/home/codebench/codes/1760/1576/main.py", line 21
    elif(a[i] == b[i])
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:02:50) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i])
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- ERROR:
File "XXXX", line 21
    elif(a[i] == b[i])
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:03:03) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:03:09) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
-- EXECUTION TIME:
0.440869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1576/main.py", line 8, in <module>
    while(i < size(a or b)):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:05:17) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size)
	if(ca > cb):
		print(eusapia).upper()
	elif(cb > ca):
		print(barsanulfo).upper()
	else:
		print(empate).upper()
-- ERROR:
File "XXXX", line 26
    if(ca > cb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:06:20) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a or b))
	if(ca > cb):
		print((eusapia).upper())
	elif(cb > ca):
		print((barsanulfo).upper())
	else:
		print((empate).upper())
-- ERROR:
File "XXXX", line 26
    if(ca > cb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:06:34) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a or b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a or b))
if(ca > cb):
		print((eusapia).upper())
elif(cb > ca):
		print((barsanulfo).upper())
else:
		print((empate).upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:07:17) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print((eusapia).upper())
elif(cb > ca):
		print((barsanulfo).upper())
else:
		print((empate).upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:08:23) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:08:31) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper())
-- EXECUTION TIME:
0.502732
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:09:30) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a) or i <size(b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper())
-- EXECUTION TIME:
0.471341
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:09:31) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a) or i <size(b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:09:42) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a) or i <size(b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper())
-- EXECUTION TIME:
0.530432
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
